resolve overflow again

--- a/Css/Style.css
+++ b/Css/Style.css
@@ -370,7 +370,7 @@ body {
         align-items: center;
         justify-content: center;
         align-content: center;
-        overflow-x: hidden;
+        overflow: hidden;
     }
     .news-row {
         align-content: center;
@@ -427,7 +427,7 @@ body {
         align-items: center;
         justify-content: center;
         align-content: center;
-        overflow-x: hidden;
+        overflow: hidden;
     }
     .news-row {
         align-content: center;
@@ -457,7 +457,7 @@ body {
         margin-bottom: 85px;
     }
     .link-button {
-        margin-left: 25%;
+        margin-left: 20%;
         padding: 10px 45px;
     }
     .home,
